--- a/index.html
+++ b/index.html
@@ -1,4 +1,40 @@
-Lol
-just for file hosting 
 
-<html> code </html>
+</body>
+</html>
+
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Android apk</title>
+    <link href="Web Site.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <script src="script.js"></script>
+   <script src="Cusor script.js"></script>
+  </body>
+<h1 style="text-align:center;">Welcome!</h1> 
+<html>
+<head>
+<style>
+.Game {
+  background-color: #cb2c31; /* red */
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+
+.Game {border-radius: 8px;}
+
+</style>
+</head>
+<body>
+
+<div style="text-align:center;">
+<button onClick="location.replace('https://swf-games.aydenduggar.repl.co/')" class="Game" >Download</button>
